RESOLVED FIXED220492
TypedArray's [[DefineOwnProperty]] should throw in case of failure
https://bugs.webkit.org/show_bug.cgi?id=220492
Summary TypedArray's [[DefineOwnProperty]] should throw in case of failure
Alexey Shvayka
Reported 2021-01-08 18:10:21 PST
TypedArray's [[DefineOwnProperty]] should throw in case of failure
Attachments
Patch (8.96 KB, patch)
2021-01-08 18:12 PST, Alexey Shvayka
no flags
Patch (11.52 KB, patch)
2021-03-02 10:02 PST, Alexey Shvayka
no flags
Patch (11.62 KB, patch)
2021-03-02 10:45 PST, Alexey Shvayka
ews-feeder: commit-queue-
Alexey Shvayka
Comment 1 2021-01-08 18:12:47 PST
Darin Adler
Comment 2 2021-01-08 18:35:26 PST
Comment on attachment 417324 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=417324&action=review > Source/JavaScriptCore/runtime/JSGenericTypedArrayViewInlines.h:409 > + typename Adaptor::Type value = toNativeFromValue<Adaptor>(globalObject, descriptor.value()); Do we really need Adaptor::Type here. Would auto work?
Radar WebKit Bug Importer
Comment 3 2021-01-15 18:11:13 PST
Alexey Shvayka
Comment 4 2021-03-02 10:02:47 PST
Created attachment 421957 [details] Patch Adjust tests and don't throw if the buffer was detached during the coercion.
Alexey Shvayka
Comment 5 2021-03-02 10:05:37 PST
(In reply to Darin Adler from comment #2) Thank you for review! > Do we really need Adaptor::Type here. Would auto work? I've reverted this bit as it was spec-incorrect: in a very unlike case of [[Value]] coercion detaching the buffer, we should silently ignore it.
Alexey Shvayka
Comment 6 2021-03-02 10:45:48 PST
Created attachment 421963 [details] Patch Fix unchecked exception.
EWS
Comment 7 2021-03-02 12:00:36 PST
Committed r273750: <https://commits.webkit.org/r273750> All reviewed patches have been landed. Closing bug and clearing flags on attachment 421963 [details].
Note You need to log in before you can comment on or make changes to this bug.