TypedArray's [[DefineOwnProperty]] should throw in case of failure https://bugs.webkit.org/show_bug.cgi?id=220492

Reviewed by Darin Adler.

JSTests:

* stress/array-species-config-array-constructor.js:
* stress/put-direct-index-broken-2.js:
Update assertions, which are most certainly incorrect, partly aligning JSC with V8.

* stress/typedarray-access-monomorphic-neutered.js:
* stress/typedarray-access-neutered.js:
* stress/typedarray-defineOwnProperty-error.js: Added.
* test262/expectations.yaml:
Incorrect tests are being updated at https://github.com/tc39/test262/pull/2958.

Source/JavaScriptCore:

While web reality [1] requires failures of the most TypeArray internal methods to be
silent, [[DefineOwnProperty]] can fail loudly if called via Object.defineProperty.

With this patch, TypeError is thrown for detached buffer, out-of-bounds index, and
non-index canonical numeric string key. Aligns JSC with the spec [2], V8, and SM.

[1]: https://github.com/tc39/ecma262/pull/2164
[2]: https://tc39.es/ecma262/#sec-integer-indexed-exotic-objects-defineownproperty-p-desc (step 3.b)

* runtime/JSGenericTypedArrayViewInlines.h:
(JSC::JSGenericTypedArrayView<Adaptor>::defineOwnProperty):


Canonical link: https://commits.webkit.org/234754@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@273750 268f45cc-cd09-0410-ab3c-d52691b4dbfc